# equipment-booking-system

./: .env.sample  Makefile  docker-compose-local-dev.yml  docker-compose.yml
backend/: .gitignore  Makefile  pyproject.toml
backend/src/api/v0/: urls.py
backend/src/api/v0/core/: pagination.py
backend/src/apps/equipments/: admin.py
backend/src/apps/equipments/models/: __init__.py  inventory_equipment.py  inventory_equipment_status.py  inventory_import.py
backend/src/apps/equipments/serializers/: inventory_equipment.py  inventory_equipment_status.py
backend/src/apps/equipments/service/: inventory_import.py
backend/src/apps/locations/: admin.py
backend/src/apps/locations/models/: locations.py
backend/src/apps/locations/serializers/: locations.py
backend/src/apps/maintenance/: admin.py
backend/src/apps/maintenance/models/: __init__.py  maintenance.py  maintenance_status.py  maintence.py
backend/src/apps/reservations/: admin.py
backend/src/apps/reservations/models/: __init__.py  (+1 more)
backend/src/apps/users/: admin.py  permission.py
backend/src/config/: config.py  settings.py  urls.py
backend/src/entrypoints/: users.py
backend/src/templates/: base.html  navbar.html
backend/src/templates/pages/: homepage.html  login.html
backend/src/utils/entrypoints/: main.py
backend/src/utils/templatetags/: filename.py
backend/src/web/: urls.py
backend/src/web/inventory_equipment/: urls.py
backend/src/web/maintenance/: urls.py
backend/src/web/reservation/: urls.py
backend/src/web/users/: urls.py
backend/src/web/views/: home_page.py  view_test.py
(+100 files in other folders)
