[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.1",
    "django-bootstrap5>=25.1",
    "django-cors-headers>=4.7.0",
    "django-filter>=25.1",
    "django-simple-captcha>=0.6.2",
    "djangorestframework>=3.16.0",
    "drf-spectacular>=0.28.0",
    "drf-spectacular-sidecar>=2025.5.1",
    "model-bakery>=1.20.4",
    "pillow>=11.2.1",
]
